--- a/tornadofaces/src/themes/tornado/scss/theme.scss
+++ b/tornadofaces/src/themes/tornado/scss/theme.scss
@@ -1,7 +1,6 @@
 $foundation-version: "1.0.3";
 
-@import 
-"vendor/normalize",
+@import "vendor/normalize",
 "settings",
 "global",
 "helpers/functions",
