--- a/tornadofaces/src/themes/tornado/scss/_settings.scss
+++ b/tornadofaces/src/themes/tornado/scss/_settings.scss
@@ -29,7 +29,7 @@
 //  24. Tabs
 //  25. Title Bar
 
-@import "helpers/_functions";
+@import "helpers/functions";
 
 // 1. CSS Exports
 // - - - - - - - - - - - - - - -
