--- a/tornadofaces/src/themes/tornado/scss/theme.scss
+++ b/tornadofaces/src/themes/tornado/scss/theme.scss
@@ -37,4 +37,5 @@ $foundation-version: "1.0.3";
 "components/sidemenu",
 "components/colorpicker",
 "components/contextmenu",
+"components/source",
 "tornadofaces";
