--- a/tornadofaces/src/themes/tornado/scss/theme.scss
+++ b/tornadofaces/src/themes/tornado/scss/theme.scss
@@ -38,4 +38,5 @@ $foundation-version: "1.0.3";
 "components/colorpicker",
 "components/contextmenu",
 "components/source",
+"components/table",
 "tornadofaces";
