--- a/tornadofaces/src/themes/tornado/scss/tornadofaces.scss
+++ b/tornadofaces/src/themes/tornado/scss/tornadofaces.scss
@@ -67,7 +67,7 @@
   position: relative;
 }
 .main-wrapper {
-  padding: $global-padding 2rem;
+  padding: $global-padding 5%;
 }
 
 .icon-navigation {
