Added AJAX rowSelect support to Table

--- a/tornadofaces/src/main/resources/META-INF/resources/tornadofaces-tornado/theme.css
+++ b/tornadofaces/src/main/resources/META-INF/resources/tornadofaces-tornado/theme.css
@@ -7987,6 +7987,12 @@ table {
 tr {
   border-bottom: 1px dotted #CACACA; }
 
+tbody tr.selected {
+  background-color: #9bdbff; }
+
+.table-rowselect-single tbody tr, .table-rowselect-multiple tbody tr {
+  cursor: pointer; }
+
 td, th {
   padding: 1rem; }
 
