--- a/tornadofaces/src/themes/tornado/scss/components/_table.scss
+++ b/tornadofaces/src/themes/tornado/scss/components/_table.scss
@@ -42,6 +42,20 @@ tbody tr.selected {
   cursor: pointer;
 }
 
+tbody tr.table-expand-row {
+  cursor: default;
+}
+
+.row-toggler:before {
+  font-family: 'icomoon';
+  content: "\e625";
+}
+
+.row-toggler.open:before {
+  font-family: 'icomoon';
+  content: "\e62e" !important;
+}
+
 td, th {
   padding: $default-cell-padding;
 }
